# llm-cancer-risk-assessor

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  PROMPTS.md  README.md  pyproject.toml  streamlit_app.py
data/: patients.json
src/: __init__.py  agent.py  chat.py  config.py  ingestion.py  main.py  routes.py  schemas.py  tools.py
