[project]
name = "llm-cancer-risk-assessor"
version = "1.0.0"
description = "Clinical Decision Support Agent using Google Vertex AI (Gemini) and NICE NG12 Cancer Guidelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "pymupdf>=1.24.0",
    "google-cloud-aiplatform>=1.38.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
]
